--- a/package.json
+++ b/package.json
@@ -12,38 +12,41 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.1.0",
-    "@angular/cdk": "^13.1.1",
-    "@angular/common": "~13.1.0",
-    "@angular/compiler": "~13.1.0",
-    "@angular/core": "~13.1.0",
-    "@angular/forms": "~13.1.0",
-    "@angular/material": "^13.3.9",
-    "@angular/platform-browser": "~13.1.0",
-    "@angular/platform-browser-dynamic": "~13.1.0",
-    "@angular/platform-server": "^12",
-    "@angular/router": "~13.1.0",
-    "@scullyio/init": "^2.1.3",
-    "@scullyio/ng-lib": "^2.1.0",
-    "@scullyio/platform-server": "^2.1.0",
-    "@scullyio/scully": "^2.1.0",
-    "@scullyio/scully-plugin-puppeteer": "^2.1.3",
-    "rxjs": "~7.4.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "~15.2.8",
+    "@angular/cdk": "^15.2.8",
+    "@angular/common": "~15.2.8",
+    "@angular/compiler": "~15.2.8",
+    "@angular/core": "~15.2.8",
+    "@angular/forms": "~15.2.8",
+    "@angular/material": "^15.2.8",
+    "@angular/platform-browser": "~15.2.8",
+    "@angular/platform-browser-dynamic": "~15.2.8",
+    "@angular/platform-server": "^15",
+    "@angular/router": "~15.2.8",
+    "@scullyio/init": "^2.1.41",
+    "@scullyio/ng-lib": "^2.1.41",
+    "@scullyio/platform-server": "^2.1.41",
+    "@scullyio/scully": "^2.1.41",
+    "@scullyio/scully-plugin-puppeteer": "^2.1.41",
+    "marked": "^4.3.0",
+    "ngx-markdown": "^15.1.2",
+    "rxjs": "~7.8.1",
+    "tslib": "^2.5.0",
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.2",
-    "@angular/cli": "~13.1.2",
-    "@angular/compiler-cli": "~13.1.0",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~3.10.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.5.2"
+    "@angular-devkit/build-angular": "^15.2.7",
+    "@angular/cli": "~15.2.7",
+    "@angular/compiler-cli": "~15.2.8",
+    "@types/jasmine": "~4.3.1",
+    "@types/marked": "^4.0.8",
+    "@types/node": "^18.16.3",
+    "jasmine-core": "~4.6.0",
+    "karma": "~6.4.2",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "typescript": "~4.9.0"
   }
 }
